infra/nucky-networking/templates/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: traefik
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - protocol: HTTPS
      port: 8443
      name: https
      hostname: "*.mi6.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: mi6-com-tls
