infra/nucky-networking/templates/pihole-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-http-route
  namespace: pihole
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - "pihole.mi6.com"
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
